--- a/restaurant.html
+++ b/restaurant.html
@@ -20,7 +20,7 @@
       </h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
+    <ul id="breadcrumb" aria-label="Breadcrumb">
       <li>
         <a href="/" aria-label="Link Home Page">Home</a>
       </li>
