--- a/restaurant.html
+++ b/restaurant.html
@@ -35,12 +35,12 @@
     <div id="wrappermap">
       <!-- Beginning map -->
       <section id="map-container">
-          <div id="map"></div>
+          <div id="map" role="map"></div>
         </section>
       <!-- End map -->
       <!-- Beginning restaurant -->
       <section id="restaurant-container">
-        <h1 id="restaurant-name"></h1>
+        <h2 id="restaurant-name"></h2>
         <img id="restaurant-img">
         <p id="restaurant-cuisine"></p>
         <p id="restaurant-address"></p>
