hope this is the last
hope this is the last

--- a/restaurant.html
+++ b/restaurant.html
@@ -35,7 +35,7 @@
     <div id="wrappermap">
       <!-- Beginning map -->
       <section id="map-container">
-          <div id="map" role="map"></div>
+          <div id="map" role="application"></div>
         </section>
       <!-- End map -->
       <!-- Beginning restaurant -->
@@ -67,12 +67,13 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <script type="application/javascript" charset="utf-8" src="js/register_sw.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7_2mjv6BUTJSpU_tW4RTRbbLKAmpUZwE&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
 </body>
